# bgt-analysis

./: .gitignore  README.md  pyproject.toml
src/bgt_analysis/: beta.ipynb  partitions.ipynb  thesis-figures-beta.ipynb  thesis-figures-partitions.ipynb  thesis-figures-uniform.ipynb  uniform.ipynb
