[tool.poetry]
name = "bgt-analysis"
version = "0.1.0"
description = ""
authors = ["9kuehn <jascha.kuehn@studium.uni-hamburg.de>"]
readme = "README.md"
packages = [{include = "bgt_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.0"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
